# tinyvg-rs

./: Cargo.toml  README.md  everything.hexproj  everything.tvgt
benches/: bench.rs
examples/: parse.rs  render-all.rs  render.rs
src/: decode.rs  format.rs  lib.rs  main.rs  parser.rs  render.rs  render_helper.rs  text_format.rs
src/snapshots/: tiny_vg__parser__tests__everything.snap  tiny_vg__parser__tests__parser.snap  tiny_vg__parser__tests__shield.snap
