[package]
name = "tinyvg"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/lily-mara/tinyvg-rs"
description = "Rust decoder and renderer for the tinyvg image format"
authors = ["Lily Mara <lilymara@fastmail.com>"]
license = "MIT"

[[bench]]
name = "bench"
harness = false

[features]
default = ["render-png"]
render-png = ["cairo-rs", "piet-cairo"]

[dependencies]
byteorder = "1.4.3"
cairo-rs = { version = "0.14.0", features = ["png"], optional = true }
eyre = "0.6.5"
kurbo = "0.8.3"
packed_struct = "0.10.0"
piet = "0.5.0"
piet-cairo = { version = "0.5.0", optional = true }
structopt = "0.3.25"

[dev-dependencies]
criterion = "0.3.5"
glob = "0.3.0"
similar-asserts = "1.1.0"
